--- a/TestCases/results/report.html
+++ b/TestCases/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10959],[],[[4,0,0,[],[1,261,10694],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,186],[],[[4,0,0,[5],[1,179,2],[]],[6,0,0,[5],[1,182,1],[]],[7,0,0,[8],[1,183,1],[]],[9,0,0,[8],[1,184,0],[]]],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test04","*c:\\Users\\Admin\\Desktop\\Formation SQL\\Session 3\\TECHNIQUES D'AUTOMATISATION DE TESTS I\\cours 3 21-09-2023\\TestCases\\Test04.robot","eNrNTtEKwjAM/BUZ7HFmTkEcczC6igPdGG0/oGqGRbdKU//fTn/Ch0vujuS4Qi/uDod9NJgn5gDAclCEjqC6jWaCGunh7QsO1o3aGzvFWSr6Ewgk+qk1SM6ObdMrLoKs42xbKdmdK9mIgK6dTR6G5ELOFw1c7dvR/BqQrZJ0l4QdcpA804T0Zelm6ezF+qj822oF6PIDNTpf8g==","*Tc001 login test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test03","*C:\\Users\\Admin\\Desktop\\Formation SQL\\Session 3\\TECHNIQUES D'AUTOMATISATION DE TESTS I\\cours 3 21-09-2023\\TestCases\\Test03.robot","*../Test03.robot","*TC01","*regression","*TC02","*TC03","*sanity","*TC04"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Test04","name":"Test04","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":4,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"regression","pass":2,"skip":0},{"elapsed":"00:00:00","fail":0,"label":"sanity","pass":2,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Test03","name":"Test03","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1695950702880;
+window.output["baseMillis"] = 1695946726509;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10983;
+window.output["generated"] = 193;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
